# FileSysAsList

./: .gitignore  CMakeLists.txt  Псевдокод.txt  пример_файловой_системы.fsal  файловая_система.fsal
include/: fileSys.h  menu.h
lib/MenuWork/: MenuWork.cpp
src/: fileSys.cpp  main.cpp  menu.cpp
